Initial consensus tracking support.
We now track NEWCONSENSUS events, a la TorCtl.ConsensusTracker.
config.stale_router_timeout specficies how long, in seconds, that
we should continue to export router data after a router falls out
of the consensus.

--- a/torbel_config.py.example
+++ b/torbel_config.py.example
@@ -10,6 +10,9 @@ control_port = 9051
 control_password = ""
 
 ## TorBEL test settings.
+# When should we stop exporting routers that have fallen out of the
+# global consensus?  Timeout value in seconds.
+stale_router_timeout = 60 * 60 * 4
 
 # Complete list of ports to test exiting from.
 test_port_list = [6667, 8080, 8443]
