Add config option torctl_debug.
Records TorCtl communications in TorCtlDebug-DDDD, where DDDD is the
int(time.time()) when the controller Connection was started.

--- a/torbel_config.py.example
+++ b/torbel_config.py.example
@@ -1,6 +1,7 @@
 ## Connection settings for Tor.
 tor_port = 9050
 tor_host = "localhost"
+torctl_debug = True
 
 ## Connection settings for the Tor control port.
 control_port = 9051
