--- a/torbel_config.py.example
+++ b/torbel_config.py.example
@@ -1,3 +1,5 @@
+from logger import *
+
 ## Connection settings for Tor.
 tor_port = 9050
 tor_host = "localhost"
@@ -26,3 +28,4 @@ csv_gzip = False
 
 # Should TorBEL run as a daemon?
 daemonize = False
+log_level = DEBUG
