Implement JSON export/import support.
 - When Python supports native JSON manipulation (only Python >= 2.6),
   export data in JSON format as well as CSV.
 - Rework config.py options
   - csv_export_file => export_file_prefix: .json(.gz)/.csv(.gz) automatically
     appended.
   - csv_gzip => export_gzip: turns on gzip output for all export formats.
 - Significantly compact ExitPolicyLine string output from TorCtl's implementation.
   Yields ~30% space savings.
 - Always make initial, untested export after starting TorBEL.
 - Import support in query.py.
 - Fix a few minor bugs in query.py.

--- a/config.py.example
+++ b/config.py.example
@@ -31,11 +31,11 @@ test_host = ""
 # the number of test ports you have defined above.
 max_built_circuits = 200
 
-# For CSV exports, specify the output filename and whether or not
-# it should be gzipped.  If csv_gzip is True, torbel will automatically
-# append ".gz" to csv_export_file.
-csv_export_file = "bel_export.csv"
-csv_gzip = False
+# For data exports, specify the output file prefix and whether or not
+# exports should be gzipped.  If export_gzip is True, torbel will export
+# files of type ".json.gz" and ".csv.gz".
+export_file_prefix = "torbel_export"
+export_gzip = False
 
 # Should the TorBEL controller run as a daemon?
 daemonize = False
