--- a/dnsel/config.py.example
+++ b/dnsel/config.py.example
@@ -1,19 +1,34 @@
 ## DNS server internal settings
 # Root domain from which we server queries authoritatively.
+# Must be a string.
 zone = "dnsel.torproject.org"
 # Time To Live of all A records in seconds.  1800 is a good default.
 ttl  = 1800
 
 ## DNS server network settings
-# IP address to bind to.
+# IP address to bind to.  Must be a string.
 listen_host = ""
 # Port to listen on, for both TCP and UDP.
 listen_port = 53
 # Listen on TCP and/or UDP.
+# At least one must be selected for the dnsel to run.
+# Valid values are True and False.
 listen_tcp  = True
 listen_udp  = True
 
 ## TorBEL configuration
 # Export file prefix to look for.
 # We use this to find the TorBEL status file and export file.
+# Must be a string representing a valid, accessible export
+# file location.
 export_prefix = "torbel_export"
+
+## Individual enable flags for each query type.
+## At least one query type must be enabled for the dnsel to run.
+## Valid values are True and False.
+# Enable query type #1: ip-port
+enable_ip_port = True
+# Enable query type #3: me
+enable_me = True
+# Enable query type #4: ip-port-list
+enable_ip_port_list = True
